<resources>
    <string name="app_name">Gevrek</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="navigationbar_array">
        <item>News Groups</item>
        <item>Lectures</item>
        <item>Email</item>
    </string-array>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_courses">CoursesActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_news_gropu_edit">NewsGropuEditActivity</string>
    <string name="title_activity_read_message">ReadMessageActivity</string>
    <string name="title_activity_course_add">CourseAddActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="homeworks">Homeworks</string>
    <string name="course_details">Course Details</string>
    <string name="select_a_course">Select a Course</string>
    <string name="must_fill_error">Must Fil</string>
    <string name="select_gorups">Select Groups</string>
    <string name="you_reached_first_message">You reached first message.</string>
    <string name="you_reached_last_message">You have reached last message.</string>
    <string name="info">INFO</string>
    <string name="staff">Staff</string>
    <string name="announcments">Announcements</string>
    <string name="lecture_notes">Lecture Notes</string>
    <string name="exams">Exams</string>
    <string name="oh_no">"Oh no! "</string>
    <string name="network_problem">Network Problem</string>
    <string name="gevrek">Gevrek</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search">search</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="from">From</string>
    <string name="time">Date</string>
    <string name="subject">Subject</string>
    <string name="body">Text</string>
    <string name="quote">Quote</string>
    <string name="send">Send</string>
    <string name="news">News</string>
    <string name="course">Courses</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
    <string name="active_user">Active User</string>
    <string name="change_username">Change username.</string>
    <string name="bandwidth_control">Bandwidth Control</string>
    <string name="avatar_download_options">Avatar Download Options</string>
    <string name="download_when">Download when...</string>
    <string name="next_page">Load next page?</string>
    <string name="load">Load</string>
    <string name="otheritem">Others</string>
</resources>
