<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@mipmap/newsgroup"
            android:title="@string/news"
            android:checked="true"/>
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@mipmap/course"
            android:title="@string/course" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@mipmap/email"
            android:title="@string/email" />
    </group>

    <item android:title="@string/otheritem">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@mipmap/settings"
                android:title="@string/settings" />
        </menu>
    </item>

</menu>